[package]
name = "smartos-image-server"
version = "0.2.0"
authors = ["Nahum Shalman <nahamu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = { git = "https://github.com/nshalman/dropshot", branch = "tokio-upgrade" }
serde = { version = "1.0.0", features = [ "derive" ]}
tokio = { version = "1", features = [ "full" ] }
schemars = { version = "0.8", features = [ "uuid" ] }
uuid = { version = "0.8.0", features = [ "serde", "v4" ] }
